[tool.poetry]
name = "python-mongodb"
version = "0.1.0"
description = ""
authors = ["Jesus <tjesus@lopes.com.br>"]
readme = "README.md"
packages = [{include = "python_mongodb"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
